syntax = "proto3";
package user;

option java_package = "com.zero.rainy.api.grpc.pb.user";
option java_outer_classname = "UserServ";

// RCP 调用服务
service UserService{
  rpc SayHello(UserRequest) returns (UserReply){}
}

// SayHello 请求参数
message UserRequest{
  string username = 1;
  float score = 2;
  double price = 3;
  bool locked = 4;
  sint64 uid = 5;
  string sendTime = 6;
}

// SayHello 请求响应参数
message UserReply{
  string username = 1;
  string password = 2;
}